--- a/app/src/main/res/layout/weather_controller_layout.xml
+++ b/app/src/main/res/layout/weather_controller_layout.xml
@@ -26,27 +26,25 @@
         android:layout_marginBottom="70dp"/>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:textSize="90sp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/default_temp"
         android:id="@+id/tempTV"
-        android:layout_below="@+id/changeCityButton"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
+        android:layout_below="@+id/changeCityButton"
+        android:text="@string/default_temp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/white"
+        android:textSize="90sp"/>
 
     <ImageButton
+        android:id="@+id/changeCityButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/changeCityButton"
-        android:src="@drawable/change_city_symbol_small"
-        android:contentDescription="@string/change_city_description"
-        android:background="@null"
-        android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
+        android:background="@null"
+        android:contentDescription="@string/change_city_description"
+        android:src="@drawable/change_city_symbol_small"/>
 
     <FrameLayout
         android:layout_width="match_parent"
